--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@lordicon/react": "^1.10.1",
+    "gifler": "^0.1.0",
     "gsap": "^3.12.7",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "resume": "file:"
   },
   "devDependencies": {
